--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "groq-sdk": "^0.37.0",
     "lucide-react": "^0.545.0",
     "next": "15.5.5",
     "next-auth": "^5.0.0-beta.29",
+    "next-intl": "^4.6.1",
+    "openai": "^6.10.0",
     "prisma": "^6.17.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
